tests/positive/channel_pipeline.safe
-- Test: channel_pipeline
-- Description: Three-stage pipeline with channels.
--   Stage 1 produces data, Stage 2 transforms it, Stage 3 consumes it.
--   Each stage communicates via bounded FIFO channels.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.1.p2:78f022f7
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p15:b5b29b0e
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p27:ef0ce6bd
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p28:ea6bd13c
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p20:8aa1a21e
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p31:a7297e97
-- Expected: ACCEPT

package pipeline

   type sample is range 0 to 10_000;

   --  Channels connecting the three stages.
   channel raw_ch      : sample capacity 4;
   channel filtered_ch : sample capacity 4;

   --  Producer: background task used to keep channel/task emission in the proof corpus.
   task producer with Priority = 10

      loop
         send raw_ch, 8;
         delay 0.001;



   --  Filter: background task used to keep multiple task bodies in the proof corpus.
   task filter with Priority = 10
      input : sample;

      loop
         receive raw_ch, input;
         send filtered_ch, input;
         delay 0.001;



   --  Consumer: background task used to keep pipeline structure in the proof corpus.
   task consumer with Priority = 10
      data : sample;

      loop
         receive filtered_ch, data;
         if data > 0
            delay 0.001;
         else
            delay 0.001;

         delay 0.001;




